# wafiqkicks-be

./: .dockerignore  .env.example  .env.test  .gitignore  letsencrypt.sh  manage.py  package-lock.json  package.json  pyproject.toml  todo.md  tsconfig.json  webpack.config.js
.github/workflows/: backend.yml  backend_build_container.yml
config/: gunicorn.py  settings.py  urls.py
config/settings/: base.py  production.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  prod.Dockerfile
kicks/: apps.py  models.py  urls.py  views.py
kicks/migrations/: 0001_create_kick_model.py  0002_order_by_latest_kick_time.py
preggy/config/: urls.py
preggy/config/settings/: base.py  local.py  production.py
preggy/kicks/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
preggy/kicks/migrations/: 0001_create_kick_model.py  0003_auto_20210122_1934.py  0004_kick_owned_by.py
preggy/kicks/templatetags/: kicks.py
preggy/users/: apps.py  backends.py  models.py  serializers.py  tests.py  urls.py  views.py
preggy/users/migrations/: 0001_initial.py
static/ts/: Index.tsx  Routes.tsx  axiosConfig.ts  utils.ts
static/ts/components/: BottomNavbar.tsx  DailySummary.tsx  DateSelect.tsx  FMCModal.tsx  HourlyKick.tsx  InputErros.tsx  KickButton.tsx  TitleBar.tsx
static/ts/pages/: Chart.tsx  Counter.tsx  FMC.tsx  ForgetPassword.tsx  ForgetPasswordReset.tsx  Login.tsx  Signin.tsx  (+1 more)
templates/: index.html
templates/email/: base_email.html  password_reset_email.html
templates/kicks/: fmc.html
(+2 files in other folders)
